--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "crds-styles": "^0.11.3",
     "formiojs": "^2.10.1",
     "native-promise-only": "^0.8.1",
     "phoenix": "file:../deps/phoenix",
@@ -16,6 +17,8 @@
     "babel-brunch": "6.1.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "copycat-brunch": "^1.1.0",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.10.0"
   }
 }
